--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,7 +12,7 @@
   --bg-color-transparent: #ff000080;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
-  --accent-color: #fe7e7e;
+  --accent-color: #ff0000;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
 }
