--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,12 +1,12 @@
 /* FONTS */
 
-@import url("https://fonts.googleapis.com/css2?family=Bungee&family=Rubik+Wet+Paint&display=swap");
+@import url("'https://fonts.googleapis.com/css2?family=Audiowide&family=Bebas+Neue&display=swap");
 
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: "Bungee", sans-serif;
-  --font-secondary: "Arvo", serif;
+  --font-primary: "Audiowide", sans-serif;
+  --font-secondary: "Bebas Neue", serif;
   --font-code: "Roboto", monospace;
   --bg-color: #000000;
   --bg-color-transparent: #ff000080;
