--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -5,14 +5,14 @@
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: "Audiowide", sans-serif;
-  --font-secondary: "Bebas Neue", serif;
+  --font-primary: "Bebas Neue", sans-serif;
+  --font-secondary: "Audiowide", serif;
   --font-code: "Roboto", monospace;
   --bg-color: #000000;
-  --bg-color-transparent: #ff000080;
+  --bg-color-transparent: #a00000;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
-  --accent-color: #ff0000;
+  --accent-color: #a00000;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
 }
