--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,6 +1,6 @@
 /* FONTS */
 
-@import url("'https://fonts.googleapis.com/css2?family=Audiowide&family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Bebas+Neue&display=swap");
 
 /* GLOBAL STYLES */
 
