--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -7,7 +7,7 @@
 :root {
   --font-primary: "Audiowide", sans-serif;
   --font-secondary: "Bebas Neue", serif;
-  --font-code: "Roboto", monospace;
+  --font-code: "Audiowide", monospace;
   --bg-color: #000000;
   --bg-color-transparent: #a00000;
   --font-color: #ffffff;
