--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -319,13 +319,13 @@ section {
 .splide {
   position: absolute;
   top: 90px;
-  left: 3rem;
+  left: 5rem;
   z-index: -1;
 }
 
 .splide__slide {
-  border: var(--accent-color) solid;
-  border-width: 1px 0px;
+  border: var(--bg-color) solid;
+  border-width: 5px 0px;
 }
 
 .splide__slide img {
