--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,7 +12,7 @@
   --bg-color-transparent: #a00000;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
-  --accent-color: #a00000;
+  --accent-color: #000000;
   --header-shadow: var(--bg-color) 0px 0px 0px;
   --card-shadow: var(--accent-color) 0px 0px 10px;
 }
