--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -5,9 +5,9 @@
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: "Merriweather", sans-serif;
+  --font-primary: "Orbitron", sans-serif;
   --font-secondary: "Comfortaa", serif;
-  --font-code: "Merriweather", monospace;
+  --font-code: "Orbitron", monospace;
   --bg-color: #070707;
   --bg-color-transparent: #a00000;
   --font-color: #ffffff;
