--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,13 +1,13 @@
 /* FONTS */
 
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Merriweather:wght@300&family=Orbitron&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Boogaloo&family=Comfortaa:wght@300&display=swap");
 
 /* GLOBAL STYLES */
 
 :root {
-  --font-primary: "Orbitron", serif;
+  --font-primary: "Boogaloo", sans-serif;
   --font-secondary: "Comfortaa", serif;
-  --font-code: "Orbitron", monospace;
+  --font-code: "Boogaloo", monospace;
   --bg-color: #070707;
   --bg-color-transparent: #a00000;
   --font-color: #ffffff;
