--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -14,7 +14,7 @@
   --btn-bg-color: #ffffff;
   --accent-color: #a00000;
   --header-shadow: var(--accent-color) 0px 0px 5px;
-  --card-shadow: var(--bg-color) 0px 0px 0px;
+  --card-shadow: var(--bg-color) 0px 0px 10px;
 }
 
 * {
@@ -78,7 +78,7 @@ header .container {
 }
 
 .not-connected h1 {
-  text-shadow: 2px 2px 0 var(--accent-color);
+  text-shadow: 2px 2px 0 var(--bg-color);
   font-style: italic;
   margin: 2rem 0;
   font-size: 3.5rem;
@@ -210,7 +210,7 @@ section {
 }
 
 .countdown h1 {
-  text-shadow: 2px 2px 0 var(--accent-color);
+  text-shadow: 2px 2px 0 var(--bg-color);
   font-style: italic;
   margin: 2rem 0;
   font-size: 3.5rem;
